ipc: Add Lite Shared Memory Manager This patch implements lightweight shared memory manader. Manager divides shared memory in equal parts - one per core. Manager allows for memory allocation and interprocessor pointer passing.
Signed-off-by: dchat-nordic <dominik.chat@nordicsemi.no>

--- a/subsys/CMakeLists.txt
+++ b/subsys/CMakeLists.txt
@@ -1,5 +1,5 @@
 #
-# Copyright (c) 2018 - 2020 Nordic Semiconductor ASA
+# Copyright (c) 2018 - 2021 Nordic Semiconductor ASA
 #
 # SPDX-License-Identifier: LicenseRef-Nordic-5-Clause
 #
@@ -49,3 +49,5 @@ add_subdirectory(debug)
 add_subdirectory(partition_manager)
 
 add_subdirectory_ifdef(CONFIG_NRF_RPC nrf_rpc)
+
+add_subdirectory(ipc)
