--- a/subsys/Kconfig
+++ b/subsys/Kconfig
@@ -1,5 +1,5 @@
 #
-# Copyright (c) 2018 - 2020 Nordic Semiconductor
+# Copyright (c) 2018 - 2021 Nordic Semiconductor
 #
 # SPDX-License-Identifier: LicenseRef-Nordic-5-Clause
 #
@@ -42,3 +42,5 @@ rsource "zigbee/Kconfig"
 rsource "mgmt/fmfu/Kconfig"
 
 rsource "caf/Kconfig"
+
+rsource "ipc/Kconfig"
