ipc_service: Add SM_IPT backend
Add SM_IPT backed for IPC_Service.
Backend supports multiple endpoints.
Each endpoint is identified by 32-bit hash.
This approach makes comparison faster than
string identification.

Signed-off-by: Dominik Chat <dominik.chat@nordicsemi.no>

--- a/subsys/sm_ipt/CMakeLists.txt
+++ b/subsys/sm_ipt/CMakeLists.txt
@@ -9,3 +9,4 @@ zephyr_include_directories(include)
 zephyr_library()
 
 zephyr_library_sources_ifdef(CONFIG_SM_IPT sm_ipt_os.c)
+zephyr_library_sources_ifdef(CONFIG_IPC_SERVICE_BACKEND_SM_IPT ipc_service_sm_ipt.c)
