Okrojenie windows phone
Dodac ios jako URI

Signed-off-by: Dominik Chat <dominik.chat@nordicsemi.no>

--- a/subsys/nfc/ndef/Kconfig
+++ b/subsys/nfc/ndef/Kconfig
@@ -64,9 +64,9 @@ config NFC_NDEF_CH_REC
 	  Enable NDEF Connection Handover records generator library
 
 config NFC_NDEF_LAUNCHAPP
-	bool "NDEF Launch App library"
+	bool "NDEF Launch app library"
 	help
-	  Enable NDEF Launch App library
+	  Enable NDEF Launch app library
 
 config NDEF_FILE_SIZE
 	int
